Agregar archivo .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Ver https://help.github.com/articles/ignoring-files/ para más información sobre ignorar archivos.
 
 # dependencies
 /node_modules
@@ -24,3 +24,4 @@ yarn-error.log*
 
 .idea
 .vscode
+
